Opt: Enable SLTD

--- a/optimization/extension/popup.html
+++ b/optimization/extension/popup.html
@@ -9,10 +9,10 @@
         <button id="cluster">元素聚类</button>
         <br>
         <button id="savedom">保存文档</button>
-        <!-- <br>
+        <br>
         <button id='sltd'>Layout Deferring</button>
         <br>
-        <button id="resume">Layout Resume</button> -->
+        <button id="resume">Layout Resume</button>
     </div>
 
     <style>
